# s2-exercises

./: CMakeLists.txt
02-abox/: abox.cpp
03-sintable/: sintable.cpp
04-class_grades/: classgrades.cpp
05-prime_distribution/: prime-dist.cpp
06-base64/: BasicTypes.h  BitFuncs.cpp  BitFuncs.h  base64.cpp  base64_encode.hpp  bit_funcs.cpp  bit_funcs.h
07-text_bar_chart/: textbarchart.cpp
08-bom_gen/: bomgen.cpp
